[package]
authors = ["Jay Graber <graber.jay@gmail.com>"]
description = "examples for bellman zk-SNARK library"
license = "MIT/Apache-2.0"
name = "bellman-tutorial"
version = "0.1.0"

[dependencies]
rand = "0.7"
rand_core = "0.5"
bit-vec = "0.4.4"
byteorder = "1"
pairing = "0.16"
group = "0.6"
ff = "0.6"
bellman = "0.6.0"
